--- a/index.abc.html
+++ b/index.abc.html
@@ -88,6 +88,13 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
       line-height: 1.6;
     }
+    #menuFiltroVenda {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
     #listaVendas div {
       background: white;
       margin-bottom: 10px;
