--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     .container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 20px;
       padding: 30px;
       max-width: 1200px;
