--- a/index.abc.html
+++ b/index.abc.html
@@ -51,6 +51,32 @@
       font-size: 0.9em;
       flex: 1 1 200px;
     }
+    .bloco-com-vendas {
+  background: #e9f9f0;
+  border-left: 6px solid #27ae60;
+  padding: 15px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+}
+
+.bloco-sem-vendas {
+  background: #fdecea;
+  border-left: 6px solid #c0392b;
+  padding: 15px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+}
+
+.bloco-com-vendas h3 {
+  color: #2e7d32;
+  margin-top: 0;
+}
+
+.bloco-sem-vendas h3 {
+  color: #c0392b;
+  margin-top: 0;
+}
+
     .filters select,
     .filters input {
       padding: 10px;
@@ -291,9 +317,10 @@ function listarVendas(filt){
   const semVendas = filt.filter(d => d.quantidade === 0);
 
   // Bloco: PRODUTOS COM VENDAS
-  if (comVendas.length > 0) {
-    const blocoCom = document.createElement('div');
-    blocoCom.innerHTML = `<h3>✅ Produtos com Vendas</h3>`;
+ if (comVendas.length > 0) {
+  const blocoCom = document.createElement('div');
+  blocoCom.className = 'bloco-com-vendas';
+  blocoCom.innerHTML = `<h3>✅ Produtos com Vendas</h3>`;
     comVendas.forEach(d => {
       const div = document.createElement('div');
       div.innerHTML = `<p>${formatDataBr(d.data)} | ${d.empresa} | <strong>${d.produto}</strong> — ${d.quantidade} un — ${formatMoeda(d.faturamento)} — Lucro: ${formatMoeda(d.lucro)}</p>`;
@@ -305,8 +332,9 @@ function listarVendas(filt){
 
   // Bloco: PRODUTOS COM QUANTIDADE 0 (com registro mas sem venda)
   if (semVendas.length > 0) {
-    const blocoSem = document.createElement('div');
-    blocoSem.innerHTML = `<h3>⚠️ Produtos Registrados mas com Quantidade 0</h3>`;
+  const blocoSem = document.createElement('div');
+  blocoSem.className = 'bloco-sem-vendas';
+  blocoSem.innerHTML = `<h3>⚠️ Produtos Registrados mas com Quantidade 0</h3>`;
     semVendas.forEach(d => {
       const div = document.createElement('div');
       div.innerHTML = `<p>${formatDataBr(d.data)} | ${d.empresa} | <strong>${d.produto}</strong> — ${d.quantidade} un — ${formatMoeda(d.faturamento)} — Lucro: ${formatMoeda(d.lucro)}</p>`;
