--- a/index.abc.html
+++ b/index.abc.html
@@ -123,6 +123,40 @@
       margin-bottom: 30px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
+    #popupOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+#popupContent {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 800px;
+  width: 90%;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+#popupContent h2 {
+  margin-top: 0;
+}
+#popupClose {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+  z-index: 1001;
+}
+
     #analises h2 {
       margin-top: 30px;
       font-size: 1.2em;
@@ -191,6 +225,15 @@
     <div>💰 Lucro: <span id="totalLucro">R$ 0,00</span></div>
   </div>
 
+  <div id="popupOverlay">
+  <div id="popupContent">
+    <h2 id="popupTitle"></h2>
+    <canvas id="graficoProdutoCanvas"></canvas>
+    <div id="dadosProdutoTabela"></div>
+  </div>
+  <div id="popupClose" onclick="fecharPopup()">&times;</div>
+</div>
+
   <canvas id="graficoVendas" style="display:none;"></canvas>
 
  <div class="analise-flex">
@@ -203,10 +246,7 @@
     <div id="semVendas">(Necessário lista completa de produtos para comparar)</div>
   </div>
 
-  <div id="graficoProdutoSelecionado">
-    <h2>📈 Evolução do Produto Selecionado</h2>
-    <canvas id="graficoProdutoCanvas"></canvas>
-  </div>
+
 
   <div id="listaVendas"></div>
 </div>
@@ -275,6 +315,10 @@ function desenharGrafico(filt, empresaSelecionada){
   document.getElementById('graficoVendas').style.display = 'block';
 }
 
+  function fecharPopup() {
+  document.getElementById('popupOverlay').style.display = 'none';
+  if(chartProduto) chartProduto.destroy();
+}
 function mostrarAnalises(filt) {
   const countByProd = {};
   filt.forEach(d => {
@@ -284,6 +328,8 @@ function mostrarAnalises(filt) {
     countByProd[p].fat += d.faturamento;
     countByProd[p].luc += d.lucro;
   });
+
+
 
   const arr = Object.entries(countByProd).map(([produto, data]) => ({ produto, ...data }));
   const topVend = [...arr].sort((a, b) => b.qtd - a.qtd).slice(0, 5);
@@ -374,6 +420,7 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
   const di = document.getElementById('dataInicio').value;
   const df = document.getElementById('dataFim').value;
   const filtro = dados.filter(d => d.produto === produto && d.empresa === empresa && (!di || d.data >= di) && (!df || d.data <= df));
+
   const dadosPorData = {};
   filtro.forEach(d => dadosPorData[d.data] = (dadosPorData[d.data] || 0) + d.faturamento);
   const labels = Object.keys(dadosPorData).sort();
@@ -381,7 +428,6 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
 
   const ctx = document.getElementById('graficoProdutoCanvas').getContext('2d');
   if(chartProduto) chartProduto.destroy();
-
   chartProduto = new Chart(ctx, {
     type: 'bar',
     data: {
@@ -408,7 +454,11 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
     }
   });
 
-  document.getElementById('graficoProdutoSelecionado').style.display = 'block';
+  document.getElementById('popupTitle').textContent = `📊 Análise do Produto: ${produto}`;
+  const tabela = filtro.map(d => `<p>${formatDataBr(d.data)} | ${d.empresa} | ${d.quantidade} un | ${formatMoeda(d.faturamento)} | Lucro: ${formatMoeda(d.lucro)}</p>`).join('');
+  document.getElementById('dadosProdutoTabela').innerHTML = tabela;
+
+  document.getElementById('popupOverlay').style.display = 'flex';
 }
 
 window.onload = () => {
