--- a/index.abc.html
+++ b/index.abc.html
@@ -156,6 +156,13 @@
   cursor: pointer;
   z-index: 1001;
 }
+    #graficoVendas {
+  display: none;
+  max-width: 700px;
+  height: 300px !important;
+  margin: 0 auto 30px auto;
+}
+
 
     #analises h2 {
       margin-top: 30px;
@@ -234,7 +241,7 @@
   <div id="popupClose" onclick="fecharPopup()">&times;</div>
 </div>
 
-  <canvas id="graficoVendas" style="display:none;"></canvas>
+  <canvas id="graficoVendas"></canvas>
 
  <div class="analise-flex">
   <div id="topVendidos" class="card-analise"></div>
