--- a/index.abc.html
+++ b/index.abc.html
@@ -136,6 +136,7 @@
   z-index: 1000;
 }
 #popupContent {
+  position: relative; /* <-- ESSA LINHA NOVA */
   background: white;
   padding: 20px;
   border-radius: 10px;
@@ -144,6 +145,18 @@
   max-height: 90vh;
   overflow-y: auto;
 }
+#popupClose {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #333;
+  cursor: pointer;
+  z-index: 10;
+}
+
+
 #popupContent h2 {
   margin-top: 0;
 }
@@ -461,13 +474,11 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
         backgroundColor: 'rgba(46, 204, 113, 0.7)'
       }]
     },
-    options: {
+ options: {
   responsive: true,
   plugins: {
-    title: {
-      display: true,
-      text: `Vendas de ${produto} por dia`
-    },
+    legend: { display: false },
+    title: { display: true, text: 'Evolução de Vendas' },
     tooltip: {
       callbacks: {
         label: function(context) {
@@ -486,7 +497,7 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
     }
   }
 }
-  });
+
 
   document.getElementById('popupTitle').textContent = `📊 Análise do Produto: ${produto}`;
   const tabela = filtro.map(d => `<p>${formatDataBr(d.data)} | ${d.empresa} | ${d.quantidade} un | ${formatMoeda(d.faturamento)} | Lucro: ${formatMoeda(d.lucro)}</p>`).join('');
