--- a/index.abc.html
+++ b/index.abc.html
@@ -33,10 +33,10 @@
       text-align: center;
     }
     .container {
-  padding: 20px;
-  max-width: 100%;
-  margin: auto;
-}
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
     .filters {
       display: flex;
       flex-wrap: wrap;
@@ -57,28 +57,6 @@
   padding: 15px;
   border-radius: 12px;
   margin-bottom: 20px;
-}
-  .analise-flex {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 30px;
-}
-
-.card-analise {
-  background: white;
-  padding: 15px;
-  border-radius: 12px;
-  flex: 1 1 30%;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-  min-width: 280px;
-}
-
-.card-analise h3 {
-  margin-top: 0;
-  font-size: 1.1em;
-  color: #2c3e50;
-  margin-bottom: 10px;
 }
 
 .bloco-sem-vendas {
@@ -123,61 +101,6 @@
       margin-bottom: 30px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
-    #popupOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-#popupContent {
-  position: relative; /* <-- ESSA LINHA NOVA */
-  background: white;
-  padding: 20px;
-  border-radius: 10px;
-  max-width: 800px;
-  width: 90%;
-  max-height: 90vh;
-  overflow-y: auto;
-}
-#popupClose {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 22px;
-  font-weight: bold;
-  color: #333;
-  cursor: pointer;
-  z-index: 10;
-}
-
-
-#popupContent h2 {
-  margin-top: 0;
-}
-#popupClose {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 22px;
-  font-weight: bold;
-  color: #333;
-  cursor: pointer;
-  z-index: 10;
-}
-    #graficoVendas {
-  display: none;
-  max-width: 700px;
-  height: 300px !important;
-  margin: 0 auto 30px auto;
-}
-
-
     #analises h2 {
       margin-top: 30px;
       font-size: 1.2em;
@@ -246,28 +169,26 @@
     <div>💰 Lucro: <span id="totalLucro">R$ 0,00</span></div>
   </div>
 
-  <div id="popupOverlay">
-  <div id="popupContent">
-    <div id="popupClose" onclick="fecharPopup()">&times;</div>
-    <h2 id="popupTitle"></h2>
-    <canvas id="graficoProdutoCanvas"></canvas>
-    <div id="dadosProdutoTabela"></div>
-  </div>
-</div>
+  <canvas id="graficoVendas" style="display:none;"></canvas>
 
-  <canvas id="graficoVendas"></canvas>
+  <div id="analises">
+    <h2>⭐ Top Produtos</h2>
+    <div id="topVendidos"></div>
 
- <div class="analise-flex">
-  <div id="topVendidos" class="card-analise"></div>
-  <div id="maisLucro" class="card-analise"></div>
-  <div id="menosLucro" class="card-analise"></div>
-</div>
+    <h2>💸 Produtos Mais Lucrativos</h2>
+    <div id="maisLucro"></div>
+
+    <h2>📉 Produtos Menos Lucrativos</h2>
+    <div id="menosLucro"></div>
 
     <h2>🚫 Produtos Sem Vendas</h2>
     <div id="semVendas">(Necessário lista completa de produtos para comparar)</div>
   </div>
 
-
+  <div id="graficoProdutoSelecionado">
+    <h2>📈 Evolução do Produto Selecionado</h2>
+    <canvas id="graficoProdutoCanvas"></canvas>
+  </div>
 
   <div id="listaVendas"></div>
 </div>
@@ -321,62 +242,21 @@ function mostrarResumo(filt){
   document.getElementById('totalLucro').textContent = formatMoeda(luc);
 }
 
-  
- function desenharGrafico(filt, empresaSelecionada){
-  if(!empresaSelecionada){ 
-    document.getElementById('graficoVendas').style.display='none'; 
-    return; 
-  }
-
+function desenharGrafico(filt, empresaSelecionada){
+  if(!empresaSelecionada){ document.getElementById('graficoVendas').style.display='none'; return; }
   const dadosPorData = {};
   filt.forEach(d=> dadosPorData[d.data] = (dadosPorData[d.data]||0) + d.faturamento );
-
   const labels = Object.keys(dadosPorData).sort();
   const vals = labels.map(l=>dadosPorData[l]);
-
   const ctx = document.getElementById('graficoVendas').getContext('2d');
   if(chartVendas) chartVendas.destroy();
-
   chartVendas = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: labels.map(formatDataBr),
-      datasets: [{
-        label: 'Faturamento por dia',
-        data: vals,
-        borderColor: '#3498db',
-        backgroundColor: 'rgba(52,152,219,0.2)',
-        fill: true
-      }]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: { display: false },
-        title: { display: true, text: 'Evolução de Vendas' },
-        tooltip: {
-          callbacks: {
-            label: function(context) {
-              const valor = context.parsed.y || 0;
-              return '💰 ' + valor.toLocaleString('pt-BR', {
-                style: 'currency',
-                currency: 'BRL'
-              });
-            }
-          }
-        }
-      }
-    }
+    type:'line', data:{ labels: labels.map(formatDataBr), datasets:[{ label:'Faturamento por dia', data: vals, borderColor:'#3498db', backgroundColor:'rgba(52,152,219,0.2)', fill:true }] },
+    options:{responsive:true, plugins:{legend:{display: false}, title:{display:true,text:'Evolução de Vendas'}}, scales:{y:{beginAtZero:true}} }
   });
-
   document.getElementById('graficoVendas').style.display = 'block';
 }
 
-
-  function fecharPopup() {
-  document.getElementById('popupOverlay').style.display = 'none';
-  if(chartProduto) chartProduto.destroy();
-}
 function mostrarAnalises(filt) {
   const countByProd = {};
   filt.forEach(d => {
@@ -387,26 +267,18 @@ function mostrarAnalises(filt) {
     countByProd[p].luc += d.lucro;
   });
 
-
-
   const arr = Object.entries(countByProd).map(([produto, data]) => ({ produto, ...data }));
   const topVend = [...arr].sort((a, b) => b.qtd - a.qtd).slice(0, 5);
   const maisLuc = [...arr].sort((a, b) => b.luc - a.luc).slice(0, 5);
   const menosLuc = [...arr].sort((a, b) => a.luc - b.luc).slice(0, 5);
 
-  document.getElementById('topVendidos').innerHTML = `<h3>⭐ Top Produtos</h3>` + topVend.map(p => `<p>⭐ ${p.produto} — ${p.qtd} un / ${formatMoeda(p.fat)}</p>`).join('');
-document.getElementById('maisLucro').innerHTML = `<h3>💰 Produtos Mais Lucrativos</h3>` + maisLuc.map(p => `<p>💰 ${p.produto} — ${formatMoeda(p.luc)}</p>`).join('');
-document.getElementById('menosLucro').innerHTML = `<h3>📉 Produtos Menos Lucrativos</h3>` + menosLuc.map(p => `<p>📉 ${p.produto} — ${formatMoeda(p.luc)}</p>`).join('');
+  document.getElementById('topVendidos').innerHTML = topVend.map(p => `<p>⭐ ${p.produto} — ${p.qtd} un / ${formatMoeda(p.fat)}</p>`).join('');
+  document.getElementById('maisLucro').innerHTML = maisLuc.map(p => `<p>💰 ${p.produto} — ${formatMoeda(p.luc)}</p>`).join('');
+  document.getElementById('menosLucro').innerHTML = menosLuc.map(p => `<p>📉 ${p.produto} — ${formatMoeda(p.luc)}</p>`).join('');
 
-  // Produtos que aparecem nos dados filtrados
-  const produtosFiltrados = new Set(filt.map(d => d.produto));
-
-  // Produtos com vendas > 0 nos dados filtrados
-  const produtosComVenda = new Set(filt.filter(d => d.quantidade > 0).map(d => d.produto));
-
-  // Produtos sem nenhuma venda no período e que passaram pelo filtro
-  const naoVendidos = [...produtosFiltrados].filter(p => !produtosComVenda.has(p));
-
+  const produtosVendidos = new Set(filt.map(d => d.produto));
+  const todosProdutos = new Set(dados.map(d => d.produto));
+  const naoVendidos = [...todosProdutos].filter(p => !produtosVendidos.has(p));
 
   const container = document.getElementById('semVendas');
   container.innerHTML = `<h3>❌ Produtos Sem Vendas no Período (${document.getElementById('dataInicio').value} até ${document.getElementById('dataFim').value})</h3>`;
@@ -478,7 +350,6 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
   const di = document.getElementById('dataInicio').value;
   const df = document.getElementById('dataFim').value;
   const filtro = dados.filter(d => d.produto === produto && d.empresa === empresa && (!di || d.data >= di) && (!df || d.data <= df));
-
   const dadosPorData = {};
   filtro.forEach(d => dadosPorData[d.data] = (dadosPorData[d.data] || 0) + d.faturamento);
   const labels = Object.keys(dadosPorData).sort();
@@ -486,6 +357,7 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
 
   const ctx = document.getElementById('graficoProdutoCanvas').getContext('2d');
   if(chartProduto) chartProduto.destroy();
+
   chartProduto = new Chart(ctx, {
     type: 'bar',
     data: {
@@ -496,36 +368,23 @@ function exibirGraficoProdutoSelecionado(produto, empresa){
         backgroundColor: 'rgba(46, 204, 113, 0.7)'
       }]
     },
- options: {
-  responsive: true,
-  plugins: {
-    legend: { display: false },
-    title: { display: true, text: 'Evolução de Vendas' },
-    tooltip: {
-      callbacks: {
-        label: function(context) {
-          const valor = context.parsed.y || 0;
-          return '💰 ' + valor.toLocaleString('pt-BR', {
-            style: 'currency',
-            currency: 'BRL'
-          });
+    options: {
+      responsive: true,
+      plugins: {
+        title: {
+          display: true,
+          text: `Vendas de ${produto} por dia`
+        }
+      },
+      scales: {
+        y: {
+          beginAtZero: true
         }
       }
     }
-  },
-  scales: {
-    y: {
-      beginAtZero: true
-    }
-  }
-}
+  });
 
-
-  document.getElementById('popupTitle').textContent = `📊 Análise do Produto: ${produto}`;
-  const tabela = filtro.map(d => `<p>${formatDataBr(d.data)} | ${d.empresa} | ${d.quantidade} un | ${formatMoeda(d.faturamento)} | Lucro: ${formatMoeda(d.lucro)}</p>`).join('');
-  document.getElementById('dadosProdutoTabela').innerHTML = tabela;
-
-  document.getElementById('popupOverlay').style.display = 'flex';
+  document.getElementById('graficoProdutoSelecionado').style.display = 'block';
 }
 
 window.onload = () => {
