--- a/index.meta.html
+++ b/index.meta.html
@@ -186,16 +186,24 @@ async function carregarMetas() {
   const dataFim = document.getElementById("dataFim").value;
   const empresa = document.getElementById("empresaFiltro").value;
 
-// Determina quantos dias tem no mês do filtro (ou mês atual, se não houver filtro)
-let dataReferencia = dataFim ? new Date(dataFim) : new Date();
-const mesRef = dataReferencia.getMonth();
-const anoRef = dataReferencia.getFullYear();
-const ultimoDiaMesRef = new Date(anoRef, mesRef + 1, 0);
-let diasCorridosNoMes = ultimoDiaMesRef.getDate();
+  let diasCorridosNoMes = 30;
+  let diasCorridosAteData = 30;
 
-// Variável a ser definida depois, com base nos dados
-let diasCorridosAteData = 1;
+  if (dataFim) {
+    const dataRef = new Date(dataFim);
+    const mesRef = dataRef.getMonth();
+    const anoRef = dataRef.getFullYear();
+    const hoje = new Date();
 
+    const ultimoDiaMesRef = new Date(anoRef, mesRef + 1, 0);
+    diasCorridosNoMes = ultimoDiaMesRef.getDate();
+
+    if (anoRef === hoje.getFullYear() && mesRef === hoje.getMonth()) {
+      diasCorridosAteData = hoje.getDate();
+    } else {
+      diasCorridosAteData = dataRef.getDate();
+    }
+  }
 
   const params = new URLSearchParams();
   if (dataInicio) params.append("dataInicio", dataInicio);
@@ -216,22 +224,6 @@ let diasCorridosAteData = 1;
         select.appendChild(opt);
       });
     }
-    // Define o último dia com dado registrado
-const dataIniObj = new Date(dataInicio);
-const dataFimObj = new Date(dataFim);
-
-// Considera só os dados dentro do intervalo selecionado
-const datasValidas = metas
-  .map(m => new Date(m["Data"]))
-  .filter(d => !isNaN(d) && d >= dataIniObj && d <= dataFimObj);
-
-const ultimoDiaComDados = datasValidas.length
-  ? Math.max(...datasValidas.map(d => d.getDate()))
-  : 1;
-
-diasCorridosAteData = ultimoDiaComDados;
-
-
 
     painel.innerHTML = "";
     if (metas.length === 0) {
