--- a/index.abc.html
+++ b/index.abc.html
@@ -407,7 +407,7 @@ document.getElementById('menosLucro').innerHTML = `<h3>📉 Produtos Menos Lucra
 
 
   const container = document.getElementById('semVendas');
-  container.innerHTML = `<h3>❌ Nome nas linhas vazias (indicadr de erro) (${document.getElementById('dataInicio').value} até ${document.getElementById('dataFim').value})</h3>`;
+  container.innerHTML = `<h3>❌ Nome nas linhas vazias (indicador de erro) (${document.getElementById('dataInicio').value} até ${document.getElementById('dataFim').value})</h3>`;
 
   naoVendidos.forEach(produto => {
     const div = document.createElement('div');
